--- a/surlStyle.css
+++ b/surlStyle.css
@@ -1,8 +1,33 @@
-.surlHighlight {
+.surl-highlight {
     all: inherit;
     display: inline;
+    margin: initial;
+    padding: initial;
     color: black;
     font-weight: 800;
+    position: relative;
+}
+
+.surl-highlight:hover>.surl-delete-button {
+    /* display: block; */
+    visibility: visible;
+}
+
+.surl-delete-button {
+    padding: 4px 8px;
+    background-color: red;
+    color: white;
+    border-radius: 3px;
+    cursor: pointer;
+    position: absolute;
+    visibility: hidden;
+    transition: visibility 0s;
+    transition-delay: .25s;
+    /* display: none; */
+}
+
+.surl-delete-button:hover {
+    background-color: rgb(255, 115, 115);
 }
 
 .surl-copy-to-clipboard {
@@ -13,7 +38,7 @@
     right: 10px;
 }
 
-#surlCopy {
+#surl-copy {
     z-index: 10;
     top: 0px;
     position: fixed;
@@ -23,19 +48,35 @@
 #surl-d-container {
     position: absolute;
     width: 220px;
-    height: 100px;
-    background: red;
+    /* height: 100%; */
+    background: white;
     z-index: 1000;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    float: left;
+    border-radius: 3px;
+    color: black;
+    box-shadow: 5px 5px rgba(245, 245, 245, .5);
 }
 
 #surl-d-title {
-    position: absolute;
-    top: 0;
-    left: 0;
+    align-self: flex-start;
+    flex: 1;
     padding: 5px 10px;
-    background-color: blueviolet;
+    background-color: rgb(80, 139, 248);
     color: white;
     cursor: move;
     box-sizing: border-box;
+}
+
+#surl-d-ol>li {
+    margin: 5px 0px;
+    padding: 4px 8px;
+    border-radius: 3px;
+    width: 100px;
+}
+
+#surl-d-ol>li:hover {
+    background-color: #ccc;
 }
