--- a/surlStyle.css
+++ b/surlStyle.css
@@ -47,7 +47,7 @@
 
 #surl-d-container {
     position: absolute;
-    width: 220px;
+    width: 200px;
     /* height: 100%; */
     background: white;
     z-index: 1000;
@@ -56,27 +56,73 @@
     flex-direction: column;
     float: left;
     border-radius: 3px;
+    border: 2px solid rgb(80, 139, 248);
     color: black;
-    box-shadow: 5px 5px rgba(245, 245, 245, .5);
 }
 
-#surl-d-title {
-    align-self: flex-start;
-    flex: 1;
-    padding: 5px 10px;
+#surl-d-header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background-color: rgb(80, 139, 248);
     color: white;
     cursor: move;
-    box-sizing: border-box;
 }
 
-#surl-d-ol>li {
-    margin: 5px 0px;
+#surl-d-title {
+    padding: 0 10px;
+}
+
+#surl-d-close {
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#surl-d-close:hover {
+    cursor: pointer;
+    background-color: white;
+    color: rgb(80, 139, 248);
+}
+
+#surl-d-ol {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.surl-d-delete-icon {
+    height: 20px;
+    width: 20px;
+    border-radius: 3px;
+    background: red;
+    color: white;
+}
+
+.surl-d-delete-icon:hover {
+    opacity: .6;
+}
+
+li.surl-d-li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+    width: 100%;
+}
+
+.surl-d-li>span {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     padding: 4px 8px;
     border-radius: 3px;
-    width: 100px;
+    margin-right: 10px;
+    max-width: 70%;
 }
 
-#surl-d-ol>li:hover {
+.surl-d-li>span:hover {
     background-color: #ccc;
 }
