--- a/surlStyle.css
+++ b/surlStyle.css
@@ -48,7 +48,7 @@
 }
 
 #surl-d-container {
-    position: absolute;
+    position: fixed;
     width: 200px;
     /* height: 100%; */
     background: white;
