--- a/surlStyle.css
+++ b/surlStyle.css
@@ -17,7 +17,7 @@
     padding: 4px 8px;
     background-color: red;
     color: white;
-    border-radius: 3px;
+    border-radius: 2px;
     cursor: pointer;
     position: absolute;
     visibility: hidden;
@@ -39,11 +39,11 @@
 }
 
 #surl-copy {
-    z-index: -1000;
+    z-index: 1000;
     height: 0;
     width: 0;
-    visibility: hidden;
-    top: -100px;
+    /* visibility: hidden; */
+    /* top: -100px; */
     position: fixed;
 }
 
@@ -51,15 +51,14 @@
     position: fixed;
     width: 200px;
     /* height: 100%; */
-    background: white;
+    background: #232323;
     z-index: 1000;
     cursor: pointer;
     display: flex;
     flex-direction: column;
     float: left;
-    border-radius: 3px;
-    border: 2px solid rgb(80, 139, 248);
-    color: black;
+    border-radius: 2px;
+    color: white;
 }
 
 #surl-d-header {
@@ -67,7 +66,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(80, 139, 248);
+    background-color: #323232;
     color: white;
     cursor: move;
 }
@@ -99,7 +98,7 @@
 .surl-d-delete-icon {
     height: 20px;
     width: 20px;
-    border-radius: 3px;
+    border-radius: 2px;
     background: red;
     color: white;
 }
@@ -121,11 +120,11 @@
     overflow: hidden;
     text-overflow: ellipsis;
     padding: 4px 8px;
-    border-radius: 3px;
+    border-radius: 2px;
     margin-right: 10px;
     max-width: 70%;
 }
 
 .surl-d-li>span:hover {
-    background-color: #ccc;
+    background-color: #323232;
 }
